--- a/funnel/static/sass/_layout.scss
+++ b/funnel/static/sass/_layout.scss
@@ -366,6 +366,7 @@ table.listing {
     .section {
         // border-top: 1px solid $color-outline-thin;
         padding: 0 1.2em;
+        word-wrap: break-word;
         h1 {
             margin: 0.5em 0 0 0;
         }
